--- a/RiftEffects/Main.storyboard
+++ b/RiftEffects/Main.storyboard
@@ -1414,7 +1414,7 @@
         <segue reference="cxI-vr-Pxp"/>
         <segue reference="9zd-rM-3PO"/>
         <segue reference="zWl-eA-30q"/>
-        <segue reference="q90-Vk-s0q"/>
+        <segue reference="Xyz-2Z-Q4q"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="chart.bar.doc.horizontal" catalog="system" width="115" height="128"/>
